[UX] Fix browser compatibility warnings with progressive enhancement
This change implements a proper cross-browser theming solution using:
1. Dynamic script-based theme application for all browsers
2. Progressive enhancement approach that works in Firefox & Opera
3. Updated ESLint configuration to properly handle HTML compatibility
4. Enhanced documentation of browser compatibility approach

This addresses UI theming consistency across all browsers while maintaining
the progressive enhancement approach required by the ALEJO UX guidelines.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,12 @@
         // Disable compat warnings for theme-color meta tags as we've implemented proper fallbacks
         "compat/compat": "off"
       }
+    },
+    {
+      "files": ["**/*.js"],
+      "rules": {
+        "compat/compat": "warn"
+      }
     }
   ]
 }
