feat: implement preference model with relationship memory integration

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -109,7 +109,8 @@ jobs:
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          # Note: You'll need to add the SONAR_TOKEN secret in your GitHub repository settings
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN || '' }}
         with:
           args: >
             -Dsonar.projectKey=apintodesignco_ALEJO
