--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -107,7 +107,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'development'
-    environment: development
+    environment:
+      name: development
     
     steps:
       - name: Checkout repository
@@ -133,7 +134,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging'
-    environment: staging
+    environment:
+      name: staging
     
     steps:
       - name: Checkout repository
@@ -155,7 +157,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production' || startsWith(github.ref, 'refs/tags/v')
-    environment: production
+    environment:
+      name: production
     
     steps:
       - name: Checkout repository
