Implement comprehensive accessibility features for deaf and hearing-impaired users
This commit adds several key components to enhance accessibility for deaf and hard-of-hearing users:

1. Hearing impairment detection system (hearing-impairment-detection.js)
   - Audio response pattern analysis
   - Vision-based detection of hearing aids and lip reading
   - User interaction pattern monitoring

2. Deaf accessibility helpers (deaf-accessibility-helpers.js)
   - Visual alternatives to audio feedback
   - Real-time captions and notifications
   - Vibration feedback patterns

3. Visual feedback system (visual-feedback-system.js)
   - Enhanced visual indicators for audio events
   - Customizable notification styles
   - Audio level visualization

4. Sign language processor (sign-language-processor.js)
   - Sign language recognition framework
   - Avatar-based sign language output
   - Gesture-based UI controls

5. Visual communication system (visual-communication-system.js)
   - Real-time speech-to-text captioning
   - Speaker identification
   - Environmental sound visualization

Also includes visual impairment detection and accessibility helpers to complete
the comprehensive accessibility implementation plan.

--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -110,7 +110,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           # Note: You'll need to add the SONAR_TOKEN secret in your GitHub repository settings
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN || '' }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           args: >
             -Dsonar.projectKey=apintodesignco_ALEJO
