--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -107,8 +107,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'development'
-    environment:
-      name: development
+    # IMPORTANT: Uncomment and configure the environment once it's created in GitHub repository settings
+    # Go to your repository Settings → Environments → Create 'development' environment
+    # environment: development
     
     steps:
       - name: Checkout repository
@@ -134,8 +135,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'staging'
-    environment:
-      name: staging
+    # IMPORTANT: Uncomment and configure the environment once it's created in GitHub repository settings
+    # Go to your repository Settings → Environments → Create 'staging' environment
+    # environment: staging
     
     steps:
       - name: Checkout repository
@@ -157,8 +159,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [validate, test-docker]
     if: github.event_name == 'workflow_dispatch' && github.event.inputs.environment == 'production' || startsWith(github.ref, 'refs/tags/v')
-    environment:
-      name: production
+    # IMPORTANT: Uncomment and configure the environment once it's created in GitHub repository settings
+    # Go to your repository Settings → Environments → Create 'production' environment
+    # environment: production
     
     steps:
       - name: Checkout repository
