--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "test:hearing": "node test/personalization/hearing/run-hearing-accessibility-tests.js",
     "test:vision": "node test/personalization/vision/run-vision-accessibility-tests.js",
     "test:compliance": "node test/accessibility/compliance-tests.js",
-    "test:all": "node test/run_comprehensive_tests.js"
+    "test:all": "node test/run_comprehensive_tests.js",
+    "test:eye-tracking": "vitest run tests/biometrics/eye-modules.test.js tests/biometrics/eye-tracking-integration.test.js",
+    "demo:eye-tracking": "node tools/run_eye_tracking_demo.js",
+    "deploy:eye-tracking": "node tools/deploy_eye_tracking.js"
   },
   "devDependencies": {
     "vite": "^5.0.0",
@@ -55,6 +58,9 @@
     "@playwright/test": "^1.44.0",
     "@axe-core/puppeteer": "^4.8.1",
     "@babel/core": "^7.22.5",
+    "express": "^4.18.2",
+    "open": "^9.1.0",
+    "chalk": "^5.3.0",
     "@babel/register": "^7.22.5",
     "axe-html-reporter": "^2.2.3",
     "chai": "^4.3.7",
@@ -69,6 +75,8 @@
   },
   "dependencies": {
     "face-api.js": "^0.22.2",
+    "@tensorflow/tfjs": "^4.15.0",
+    "@tensorflow-models/face-landmarks-detection": "^1.0.5",
     "tensorflow": "^0.2.0",
     "web-speech-cognitive-services": "^7.1.3"
   }
