--- a/package.json
+++ b/package.json
@@ -34,14 +34,22 @@
     "format": "prettier -w alejo/interaction/gesture_arpeggiator/static/js",
     "test": "vitest run",
     "e2e": "playwright test",
-    "test:accessibility": "node test/run_comprehensive_tests.js --accessibility",
     "test:hearing": "node test/personalization/hearing/run-hearing-accessibility-tests.js",
     "test:vision": "node test/personalization/vision/run-vision-accessibility-tests.js",
     "test:compliance": "node test/accessibility/compliance-tests.js",
     "test:all": "node test/run_comprehensive_tests.js",
     "test:eye-tracking": "vitest run tests/biometrics/eye-modules.test.js tests/biometrics/eye-tracking-integration.test.js",
     "demo:eye-tracking": "node tools/run_eye_tracking_demo.js",
-    "deploy:eye-tracking": "node tools/deploy_eye_tracking.js"
+    "deploy:eye-tracking": "node tools/deploy_eye_tracking.js",
+    "clean": "rimraf dist",
+    "build:optimized": "vite build && node tools/optimize-assets.js && node tools/analyze-bundle.js",
+    "optimize": "node tools/optimize-assets.js",
+    "analyze": "node tools/analyze-bundle.js",
+    "monitor": "node tools/resource-monitor.js",
+    "monitor:dev": "node tools/resource-monitor.js --interval 2000 --duration 3600",
+    "start": "node dist/start-alejo.js",
+    "install:prod": "npm ci --production",
+    "prepare": "node tools/setup-dependencies.js"
   },
   "devDependencies": {
     "vite": "^5.0.0",
@@ -60,18 +68,17 @@
     "@babel/core": "^7.22.5",
     "express": "^4.18.2",
     "open": "^9.1.0",
-    "chalk": "^5.3.0",
     "@babel/register": "^7.22.5",
     "axe-html-reporter": "^2.2.3",
     "chai": "^4.3.7",
-    "express": "^4.18.2",
     "mocha": "^10.2.0",
     "mocha-html-reporter": "^0.0.1",
     "mochawesome": "^7.1.3",
     "puppeteer": "^21.5.0",
     "sinon": "^15.2.0",
     "yargs": "^17.7.2",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "rimraf": "^5.0.1"
   },
   "dependencies": {
     "face-api.js": "^0.22.2",
