--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,5 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 asyncio_mode = "strict"
-log_cli = false
+log_cli = true
 log_cli_level = "INFO"
